[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1"]

[project]
name = "reportree"
authors = [
    { name = "Tomas Protivinsky", email = "tomas.protivinsky@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.7"
dynamic = ["version", "description"]
keywords = [
    "plots",
    "matplotlib",
    "data science",
    "reports",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.0.0",
    "matplotlib >= 3.0.0",
    "seaborn >= 0.10.0",
    "yattag >= 1.10.0",
    "markdown >= 3.0.0",
]
[project.urls]
Homepage = "https://github.com/protivinsky/reportree"
Documentation = "https://protivinsky.github.io/reportree"

